--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon dist/app"
+    "start": "node dist/app"
   },
   "keywords": [],
   "author": "Ololade Otemade",
